Fixed header cut off on iPad

--- a/src/Header.css
+++ b/src/Header.css
@@ -3,9 +3,7 @@
 .Header{
     background-color: #FAFAFA;
     height:100%;
-    display: flex;
-    justify-content: space-between;
-    align-items: center;
+    text-align: left;
 }
 
 .Header img{
